testData/diagnostics/base_x_pp.diag.txt
testData/diagnostics/base_x_pp.nut line = (1) column = (0) : error: argument of inc/dec operation is not assiangable
base.x++
^-----

